--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.172.0",
+    "knex": "^0.14.2",
     "lodash": "^4.17.4",
     "pg": "^7.4.0",
     "pg-pool": "^2.0.3",
